unpackaged/objects/copadoconnect__ObjectMapping__c.object
<CustomObject>
	<fields>
		<fullName>copadoconnect__Copado_Integration__c</fullName>
		<label>Copado Integration</label>
		<referenceTo>copadoconnect__Copado_Integration__c</referenceTo>
		<relationshipLabel>Object Mappings</relationshipLabel>
		<relationshipName>Object_Mappings</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object_Name__c</fullName>
		<label>Provider Object</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object_Record_Type_Label__c</fullName>
		<label>Provider Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_Object_Record_Type__c</fullName>
		<label>Provider Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Named_Credential__c</fullName>
		<formula>copadoconnect__Copado_Integration__r.copadoconnect__Named_Credential__c</formula>
		<label>Named Credential</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Provider__c</fullName>
		<formula>TEXT(copadoconnect__Copado_Integration__r.copadoconnect__Provider__c)</formula>
		<label>Provider</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Object_Name__c</fullName>
		<label>Copado Object</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Salesforce_Object_Record_Type__c</fullName>
		<label>Copado Record Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Mapped</fullName>
					<default>true</default>
					<label>Mapped</label>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadoconnect__Synced__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Synced?</label>
		<type>Checkbox</type>
	</fields>
	<label>Object Mapping</label>
	<nameField>
		<displayFormat>OM-{0000}</displayFormat>
		<label>Object Mapping Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Object Mappings</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>